# packed-integers-rs

./: .travis.yml  Cargo.toml  README.md  test_features.sh
proptest-regressions/: lib.txt  packed_integers.txt
src/: lib.rs  packed_integers.rs
