[package]
name = "packed_integers"
version = "0.1.0"
authors = ["DarkOtter <>"]
edition = "2018"
license = "Apache-2.0"
description = "A way to pack integers into variable lengths with random access"
repository = "https://github.com/DarkOtter/packed-integers-rs"

[dependencies]
indexed_bitvec = "2.3"
indexed_bitvec_core = "3.0"

[dev-dependencies]
rand = "0.6"
proptest = "0.8"
criterion = "0.2"
